--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CLIENT_ID=YOUR_CLIENT_ID
-CLIENT_SECRET=YOUR_CLIENT_SECRET
-BOT_TOKEN=YOUR_BOT_TOKEN
-SESSION_SECRET=YOUR_SESSION_SECRET
+CLIENT_ID=1148435895972810843
+CLIENT_SECRET="fPfKyi7shuutevYWKE4rTQH-iqbZzE1v"
+BOT_TOKEN="MTE0ODQzNTg5NTk3MjgxMDg0Mw.GHTvjo.hkL93DBrY_0OwSEk5yT57YebY95TcVhbN1vHSQ"
+SESSION_SECRET="gubbel"
