--- a/config.json
+++ b/config.json
@@ -1,8 +1,11 @@
 {
-	"guild":
-	{
-		"id": "1127182091914858571",
-		"bannedRoles": [ "1144335865955483778" ],
-		"moderatorRoles": [ "1136017860943155320" ]
+	"guild": {
+		"id": "1086048263620276254",
+		"bannedRoles": [
+			"1086686897876779008, 1131770750592880740"
+		],
+		"moderatorRoles": [
+			"1086050863602217020"
+		]
 	}
 }
