Mod Tool Update

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+#json
+bronies.json
+test.json
+swiss.ico
+dashie.ico
+swiss.gif
+twigg.gif
