--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "maneplace",
   "version": "1.0.0",
   "dependencies": {
+    "canvas": "^2.11.2",
     "compression": "^1.7.4",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-ws": "^5.0.2",
+    "fluent-ffmpeg": "^2.1.2",
     "greenlock-express": "^4.0.3",
     "h264-mp4-encoder": "^1.0.12",
     "pngjs": "^7.0.0",
